--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,2 +1,8 @@
-<p>this is my navbar and first project in angular</p>
+<!--Designing NavBar using Toolbar-->
 
+<mat-toolbar color="primary">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <span>Email Sender App</span>
+</mat-toolbar>
