--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
-<p>home works!</p>
 
-<button mat-stroked-button color="primary" (click)="btnClick()">Send email</button>
+
+<div class="container">
+    <h1>Welcome to our Email Sender Application... </h1>
+    <p>Send email to Anyone for FREE!</p>
+
+<a routerLink="/sendemail" mat-flat-button color="primary" (click)="btnClick()">Send email</a>
+</div>
