--- a/src/app/components/email/email.component.html
+++ b/src/app/components/email/email.component.html
@@ -1,27 +1,33 @@
 <div class="container">
     <div class="card">
-        <h1>Compose Email</h1>
 
-        <mat-form-field appearance="outline" class="field">
-            <mat-label>To</mat-label>
-            <input matInput>
-          </mat-form-field>
+        <form (ngSubmit)="doSubmitForm()">
+            <h1>Compose Email</h1>
 
-          <mat-form-field appearance="outline" class="field">
-            <mat-label>Subject</mat-label>
-            <input matInput>
-          </mat-form-field>  
+            <mat-form-field appearance="outline" class="field">
+                <mat-label>To</mat-label>
+                <input matInput name="to" [(ngModel)]="data.to">
+            </mat-form-field>
 
-          <mat-form-field appearance="outline" class="example-full-width field">
-            <mat-label>Enter your message</mat-label>
-            <textarea rows="10" matInput placeholder="Please enter your message here"></textarea>
-          </mat-form-field>
+            <mat-form-field appearance="outline" class="field">
+                <mat-label>Subject</mat-label>
+                <input matInput name="subject" [(ngModel)]="data.subject">
+            </mat-form-field>  
 
-          <!-- creating buttons -->
-          <div class="text-center">
-            <button type="submit" mat-raised-button color="primary">Send mail</button>
-          <button type="reset" mat-raised-button color="accent">Reset</button>
-          </div>
-          
+            <mat-form-field appearance="outline" class="example-full-width field">
+                <mat-label>Enter your message</mat-label>
+                <textarea name="message" [(ngModel)]="data.message" rows="10" matInput placeholder="Please enter your message here"></textarea>
+            </mat-form-field>
+
+            <!-- creating buttons -->
+            <div class="text-center">
+                <button type="submit" mat-raised-button color="primary">Send mail</button>
+                <button type="reset" mat-raised-button color="accent">Reset</button>
+            </div>
+        </form>
+        
+        <!-- printing data in json format -->
+        {{data | json}}
+
     </div>
 </div>
