--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,5 +4,8 @@
     <h1>Welcome to our Email Sender Application... </h1>
     <p>Send email to Anyone for FREE!</p>
 
-<a routerLink="/sendemail" mat-flat-button color="primary" (click)="btnClick()">Send email</a>
+<!-- <a routerLink="/sendemail" mat-flat-button color="primary" (click)="btnClick()">Send email</a> -->
+
+ <a routerLink="/sendemail" mat-flat-button color="primary" (click)="btnClick()">Send email</a>
+ 
 </div>
